message Msg {
    string nodeId = 1;
    string ip = 2;
    int port = 3;
    int heartbeat = 4;
    MsgType type = 5 [default = PING];
}

enum MsgType {
    JOIN_REQ = 0;
    JOIN_RES = 1;
    PING = 2;
    PING_REQ = 3;
    ACK = 4;
}
